--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </label>
           </div>
           <div class="btn">
-            <button id="btn" type="submit" disabled="disabled">Generate <img src="assets/images/icon-arrow-right.svg"
+            <button id="btn" type="submit">Generate <img src="assets/images/icon-arrow-right.svg"
                 alt="arrow right">
             </button>
           </div>
